test/types/locale/bradc/createNewLocale.chpl
var myNewLoc = new unmanaged locale();
writeln("myNewLoc = ", myNewLoc);
